--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,13 @@
 autopep8==1.5.5
+click==7.1.2
 numpy==1.20.1
 opencv-python==4.5.1.48
 pycodestyle==2.6.0
+PyQt5==5.15.2
+pyqt5-plugins==5.15.2.2.0.1
+PyQt5-sip==12.8.1
+pyqt5-tools==5.15.2.3.0.2
+python-dotenv==0.15.0
+qt5-applications==5.15.2.2.1
+qt5-tools==5.15.2.1.0.1
 toml==0.10.2
