--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 autopep8==1.5.5
 click==7.1.2
 numpy==1.20.1
-opencv-python==4.5.1.48
+opencv-python-headless==4.5.1.48
 pycodestyle==2.6.0
 PyQt5==5.15.2
 pyqt5-plugins==5.15.2.2.0.1
